Добавление user'а, исправление ошибок в методе PatchTaskId, исправление ошибок в makefile связанных с определением database
