# openapi/openapi.yaml
@@ -78,6 +78,81 @@ paths:
           description: Task successfully deleted
         '404':
           description: Task not found
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: The id of the user to update or delete
+        schema:
+          type: integer
+          format: int64
+    patch:
+      summary: Update an existing user
+      tags:
+        - users
+      requestBody:
+        description: The updated user information
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string # Измените на строку, так как пароль обычно хранится как строка
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: User not found
+    delete:
+      summary: Delete a user
+      tags:
+        - users
+      responses:
+        '204':
+          description: User successfully deleted
+        '404':
+          description: User not found
 components:
   schemas:
     Task:
@@ -90,3 +165,13 @@ components:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64  # Обычно используется standard int64 для ID
+        email:
+          type: string
+        password:
+          type: string # Изменено на строку
